--- a/connect4.css
+++ b/connect4.css
@@ -1,34 +1,60 @@
-/* game board table */
+.top-wrap {
+    display: flex;
+    justify-content: center;
+}
+.top-wrap div {
+    margin: 10px;
+}
 
+button.play {
+    background-color: green;
+    color: #fff;
+    font-size: 18px;
+    text-transform: uppercase;
+    border: 0 none;
+    padding: 5px 10px;
+    border-radius: 3px;
+    line-height: 18px;
+}
+
+button.play:hover {
+    background-color: rgb(0, 111, 0);
+}
+
+/* game board table */
+#board {
+    margin: 0 auto;
+}
 #board td {
-  width: 50px;
-  height: 50px;
-  border: solid 1px #666;
+    width: 50px;
+    height: 50px;
+    border: solid 1px #666;
+    border-radius: 3px;
 }
 
 /* pieces are div within game table cells: draw as colored circles */
 
 .piece {
-  margin: 5px;
-  width: 80%;
-  height: 80%;
-  border-radius: 50%;
+    margin: 5px;
+    width: 80%;
+    height: 80%;
+    border-radius: 50%;
 }
 
 .piece.p1 {
-  background-color: red;
+    background-color: red;
 }
 
 .piece.p2 {
-  background-color: blue;
+    background-color: blue;
 }
 
 /* column-top is table row of clickable areas for each column */
 
 #column-top td {
-  border: dashed 1px lightgray;
+    border: dashed 1px lightgray;
 }
 
 #column-top td:hover {
-  background-color: gold;
+    background-color: gold;
 }
